templates: fix modal width on mobile

--- a/lona_picocss/static/lona-picocss/lona-picocss.css
+++ b/lona_picocss/static/lona-picocss/lona-picocss.css
@@ -55,8 +55,10 @@ header#lona-header summary svg {
 }
 
 /* auth -------------------------------------------------------------------- */
-.auth-form dialog article {
-    min-width: 30em;
+@media (min-width: 767px) {
+    .auth-form dialog article {
+        min-width: 30em;
+    }
 }
 
 .auth-form dialog footer a {
